tests/ui/error-codes/E0282.rs
fn main() {
    let x;
    //~^ ERROR E0282
}
